static/css/s2.css
/* ... */
.gridBox table {
  width: 100%;
  border-style: hidden;
  border-collapse: collapse;
}
.gridBox td {
  padding: 0;
}
@media (max-width: 450px) {
  .gridBox td {
    border: 2px solid transparent;
  }
}
.twoBox td {
  width: 50%;
}
.threeBox td {
  width: 33.333333%;
}
.dark .filterSet td {
  border-color: #555;
}
.filterSet td.empty {
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
}
.topFilters {
  margin: -1px;
  padding: 4px 22px;
  line-height: 0px;
  background-color: #F9F9F7;
  border-top: 4px solid transparent;
  border-bottom: 1px solid #D5D5D4;
}
.sepia .topFilters {
  background-color: #F3F3F1;
}
.dark .topFilters {
  background-color: #2D2D2B;
  border-bottom: 1px solid #444;
}
.textList.fullPanel .topFilters {
  margin: 0;
  border-top: 8px solid transparent;
  padding: 6px 22px 5px;
  background-color: #EDEDED;
}
.topFilters .textFilter {
  color: #999;
  display: inline-block;
  padding: 10px 8px;
}
.topFilters .textFilter.on {
  color: black;
}
.dark .topFilters .textFilter {
  color: #bbb;
}
.topFilters .textFilter > div {
  display: table-cell;
  vertical-align: middle;
}
.textList.fullPanel .recentFilterSet {
  margin: 30px 0 12px 0;
}
.textList.fullPanel .recentFilterSet .textFilter {
  display: inline-block;
  padding: 6px 14px;
  margin: 5px;
  border-radius: 12px;
  border: 1px solid #DADADA;
  background-color: transparent;
}
.english .textList.fullPanel .recentFilterSet .textFilter {
  margin-left: 0;
}
.hebrew .textList.fullPanel .recentFilterSet .textFilter {
  margin-right: 0;
}
.textList.fullPanel .recentFilterSet .textFilter.on {
  background-color: white;
}
.topFiltersInner {
  display: inline-block;
  max-width: 80%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
}
.textList.fullPanel .topFiltersInner {
  max-width: none;
  white-space: normal;
}
.showMoreFilters {
  vertical-align: middle;
  float: right;
}
.categoryFilter {
  text-transform: uppercase;
  padding: 12px;
  text-align: center;
  font-size: 15px;
  cursor: pointer;
  line-height: 18px;
  color: #333;
}
.textFilter {
  padding: 12px 4px;
  text-align: center;
  font-size: 15px;
  line-height: 1.2;
  display: block;
  cursor: pointer;
  color: #333;
}
.categoryFilterGroup a:hover {
  text-decoration: none;
}
.categoryFilter.on, .textFilter.on {
  color: black;
}
.dark .categoryFilter.on, .dark .textFilter.on {
  color: white;
}
.textFilter.lowlight {
  color: #999;
}
.topFilters .textFilter.showMoreFilters {
  color: #999;
}
.bilingual .textFilter .he,
.bilingual .categoryFilter .he {
  display: none;
}
.fullFilterView {
  border-top: 1px solid #ddd;
  background-color: #F9F9F7;
  padding: 40px 20px;
}
.sepia .fullFilterView {
  background-color: #F3F3F1;
}
.dark .fullFilterView {
  background-color: #2D2D2B;
  border-color: #444;
}
.fullFilterView td {
  background-color: white;
  border: 2px solid #F9F9F7;
}
.fullFilterView td.empty {
  background-color: transparent;
}
.dark .fullFilterView td {
  background-color: #333331;
  border-color: #2d2d2b;
  color: white;
}
.fullFilterView .categoryFilter {
  background-color: white;
  margin-bottom: 1px;
}
.fullFilterView .categoryFilter.notClickable {
  color: #999;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  background-color: transparent;
  padding: 12px 12px 28px;
  cursor: auto;
}
.dark .fullFilterView .categoryFilter {
  background-color: #333;
}
.fullFilterView .categoryFilterGroup {
  margin-bottom: 30px;
}
.showSelectedFilters {
  background-color: #222F4F;
  color: white;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  text-align: center;
  padding: 8px;
  cursor: pointer;
  border-radius: 3px;
  margin: 16px 0;
}
.textList .textListTop > .loadingMessage,
.textList .texts .contentInner > .loadingMessage {
  padding: 22px 10px 0px;
  color: #999;
  font-size: 14px;
  text-align: center;
}
.textList .textListTop > .loadingMessage {
  position: relative;
  top: 70px;
}
.textList .texts {
  background-color: white;
  position: relative;
}
.textList.fullPanel .texts {
  background-color: #F9F9F7;
}
.sepia .textList .texts {
  background-color: #F9F9F7;
}
.dark .textList .texts {
  background-color: #333331;
}
.textList .texts .textRange {
  font-size: 1.8em;
  padding: 16px 0;
  margin: 12px 0px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  position: relative;
}
.textList .texts .textRange .title {
  color: #999;
}
.dark .textList .texts .textRange .title {
  color: #ddd;
}
.bilingual .textList .title .he {
  display: none;
}
.textList .sheet, .textList .note {
  background-color: white;
  margin: 6px 0px;
  padding: 10px 20px;
}
.textList .sheet .sheetAuthorImg,
.textList .note .noteAuthorImg {
  height: 36px;
  width: 36px;
  float: left;
  margin-right: 10px;
}
.textList .sheet .sheetViews {
  float: right;
  color: #999;
}
.textList .sheet .sheetAuthor,
.textList .note .noteAuthor {
  color: #999;
  text-transform: uppercase;
  display: block;
}
.textList .sheet .sheetTitle {
  font-size: 14px;
  text-align: left;
  color: black;
}
.textList .note .noteTitle {
  font-weight: bold;
}
.textList .note .noteTitle,
.textList .note .noteText {
  font-size: 1.8em;
}
.textRange .numberLabel {
  position: absolute;
  top: 14px;
}
.english .textRange .numberLabel {
  left: -24px;
}
.hebrew .textRange .numberLabel,
.bilingual .textRange .numberLabel  {
  right: -14px;
}
.textRange.lowlight .numberLabel {
  color: #999;
}
.toolsPanel .texts .contentInner,
.sharePanel .texts .contentInner,
.myNotesPanel .texts .contentInner,
.addToSourceSheetPanel .texts .contentInner,
.addNotePanel .texts .contentInner {
  margin: 60px auto;
}
.readerPanel.bilingual .toolsPanel .he {
  display: none;
}
.toolsMessage {
  margin: 130px 60px;
  text-align: center;
  font-size: 18px;
}
/* ... */

